--- a/css/styles.css
+++ b/css/styles.css
@@ -1,262 +1,405 @@
-html, body {
-  height: 100%; }
+/* line 4, ../scss/_layout.scss */
+body, html {
+  box-sizing: border-box;
+}
 
+/* line 8, ../scss/_layout.scss */
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+/* line 12, ../scss/_layout.scss */
+.clrfx:before, .clrfx:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+
+/* line 17, ../scss/_layout.scss */
+.clrfx:after {
+  clear: both;
+}
+
+/* line 19, ../scss/_layout.scss */
+.clrfx {
+  *zoom: 1;
+}
+
+/* line 25, ../scss/_layout.scss */
+html, body {
+  height: 100%;
+}
+
+/* line 27, ../scss/_layout.scss */
 .content {
   max-width: 72em;
   margin: 0 auto;
-  padding: 0; }
+  padding: 0;
+}
 
-@media all and (min-width: 36em) {
+@media all and (min-width: 38.75em) {
+  /* line 34, ../scss/_layout.scss */
   .layout-two-column .main {
     float: left;
     padding-right: 2%;
-    width: 70%; } }
-
+    width: 70%;
+  }
+}
+/* line 42, ../scss/_layout.scss */
 .layout-two-column .side {
-  clear: both; }
-  @media all and (min-width: 36em) {
-    .layout-two-column .side {
-      clear: none;
-      float: left;
-      padding: 0 0 0 2%;
-      width: 30%; } }
+  clear: both;
+}
+@media all and (min-width: 38.75em) {
+  /* line 42, ../scss/_layout.scss */
+  .layout-two-column .side {
+    clear: none;
+    float: left;
+    padding: 0 0 0 2%;
+    width: 30%;
+  }
+}
 
-.main {
-  background-color: #f4f4f4; }
+/* line 53, ../scss/_layout.scss */
+.main, .side,
+.grid-item, footer {
+  background-color: #f8f8f8;
+}
 
-.side {
-  background-color: #f6f6f6; }
-
-footer {
-  background-color: #f8f8f8; }
-
+/* line 62, ../scss/_layout.scss */
 .grid {
   margin: 0;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
+/* line 67, ../scss/_layout.scss */
 .grid-item {
-  border: 1px solid #ffffff;
-  padding: 1% 0; }
-  @media all and (min-width: 36em) {
-    .grid-item {
-      float: left; } }
+  border: 1px solid white;
+  padding: 1% 0;
+}
+@media all and (min-width: 38.75em) {
+  /* line 67, ../scss/_layout.scss */
+  .grid-item {
+    float: left;
+  }
+}
 
+/* line 76, ../scss/_layout.scss */
 .one-col .grid-item {
-  width: 100%; }
+  width: 100%;
+}
 
-@media all and (min-width: 36em) {
+@media all and (min-width: 38.75em) {
+  /* line 81, ../scss/_layout.scss */
   .two-col > .grid-item {
     float: left;
-    width: 50%; }
-    .two-col > .grid-item:nth-of-type(odd) {
-      clear: left; } }
+    width: 50%;
+  }
+  /* line 84, ../scss/_layout.scss */
+  .two-col > .grid-item:nth-of-type(odd) {
+    clear: left;
+  }
+}
 
-@media all and (min-width: 36em) {
+@media all and (min-width: 38.75em) {
+  /* line 91, ../scss/_layout.scss */
   .three-col > .grid-item {
     float: left;
-    width: 33.333333%; } }
+    width: 33.333333%;
+  }
+}
 
-@media all and (min-width: 36em) {
+@media all and (min-width: 38.75em) {
+  /* line 100, ../scss/_layout.scss */
   .four-col > .grid-item {
     float: left;
-    width: 25%; } }
+    width: 25%;
+  }
+}
 
-@media all and (min-width: 36em) {
+@media all and (min-width: 38.75em) {
+  /* line 109, ../scss/_layout.scss */
   .five-col > .grid-item {
     float: left;
-    width: 20%; } }
+    width: 20%;
+  }
+}
 
-@media all and (min-width: 36em) {
+@media all and (min-width: 38.75em) {
+  /* line 118, ../scss/_layout.scss */
   .six-col > .grid-item {
     float: left;
-    width: 16.666666%; } }
+    width: 16.666666%;
+  }
+}
 
+/* line 125, ../scss/_layout.scss */
 .main, .side, .grid-item {
-  border: 1px solid #ffffff; }
+  border: 1px solid white;
+}
 
-.cf {
-  *zoom: 1; }
+/* line 133, ../scss/_layout.scss */
+.embed-block {
+  position: relative;
+  padding-bottom: 56.25%;
+  overflow: hidden;
+  max-width: 100%;
+  height: auto;
+}
+/* line 139, ../scss/_layout.scss */
+.embed-block iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
-.cf:before, .cf:after {
-  content: " ";
-  display: table; }
-
-.cf:after {
-  clear: both; }
-
+/* line 4, ../scss/_type_links.scss */
 html, body {
-  font-family: helvetica, sans-serif; }
+  font-family: helvetica, sans-serif;
+}
 
+/* line 8, ../scss/_type_links.scss */
 :root {
-  font-size: 16px; }
+  font-size: 16px;
+}
 
 @media (min-width: 320px) and (max-width: 1120px) {
+  /* line 11, ../scss/_type_links.scss */
   :root {
-    font-size: calc( 16px + (24 - 16) * ((100vw - 320px) / (1120 - 320) )); } }
-
+    font-size: calc( 16px + (24 - 16) * ((100vw - 320px) / (1120 - 320) ));
+  }
+}
 @media (min-width: 1120px) {
+  /* line 17, ../scss/_type_links.scss */
   :root {
-    font-size: 24px; } }
-
+    font-size: 24px;
+  }
+}
+/* line 25, ../scss/_type_links.scss */
 h1 {
-  font-size: 3em; }
+  font-size: 300%;
+}
 
+/* line 27, ../scss/_type_links.scss */
 h2 {
-  font-size: 2.5em; }
+  font-size: 250%;
+}
 
+/* line 29, ../scss/_type_links.scss */
 h3 {
-  font-size: 2em; }
+  font-size: 200%;
+}
 
+/* line 45, ../scss/_type_links.scss */
 p {
-  margin-bottom: 2%; }
+  margin-bottom: 2%;
+}
 
+/* line 73, ../scss/_type_links.scss */
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
+/* line 81, ../scss/_type_links.scss */
+.btn {
+  background-color: #999999;
+  color: white;
+  display: table;
+  font: 300 100%/1 "Helvetica", helvetica, sans-serif;
+  margin: 0 auto;
+  padding: 1% 2%;
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-transition: all, 0.3s, ease;
+  -moz-transition: all, 0.3s, ease;
+  -ms-transition: all, 0.3s, ease;
+  -o-transition: all, 0.3s, ease;
+  transition: all, 0.3s, ease;
+}
+/* line 91, ../scss/_type_links.scss */
+.btn:hover {
+  background-color: #333333;
+  color: white;
+}
+
+/* line 4, ../scss/_nav.scss */
 #nav {
   position: relative;
   text-align: left;
-  width: 100%; }
-  #nav li {
-    list-style-type: none;
-    position: relative; }
+  width: 100%;
+}
+/* line 8, ../scss/_nav.scss */
+#nav li {
+  list-style-type: none;
+  position: relative;
+}
 
+/* line 14, ../scss/_nav.scss */
 #nav:not(:target) > a:first-of-type,
 #nav:target > a:last-of-type {
   display: inline-block;
-  background-color: #333333;
-  color: #ffffff;
+  background-color: black;
+  color: white;
   font-size: 80%;
-  padding: 1em; }
-  #nav:not(:target) > a:first-of-type:before,
-  #nav:target > a:last-of-type:before {
-    content: "\2261 ";
-    font-size: 140%;
-    position: relative;
-    top: 2px; }
-  @media all and (min-width: 36em) {
-    #nav:not(:target) > a:first-of-type,
-    #nav:target > a:last-of-type {
-      padding: .5em; } }
-  @media all and (min-width: 45em) {
-    #nav:not(:target) > a:first-of-type,
-    #nav:target > a:last-of-type {
-      display: none; } }
+  padding: 1em;
+}
+/* line 21, ../scss/_nav.scss */
+#nav:not(:target) > a:first-of-type:before,
+#nav:target > a:last-of-type:before {
+  content: "\2261 ";
+  font-size: 140%;
+  position: relative;
+  top: 2px;
+}
+@media all and (min-width: 51.25em) {
+  /* line 14, ../scss/_nav.scss */
+  #nav:not(:target) > a:first-of-type,
+  #nav:target > a:last-of-type {
+    display: none;
+  }
+}
 
+/* line 32, ../scss/_nav.scss */
 .burger {
-  font-family: "Helvetica", helvetica, sans-serif; }
+  font-family: "Helvetica", helvetica, sans-serif;
+}
 
+/* line 36, ../scss/_nav.scss */
 .burger:after {
   content: '';
-  background-color: #ffffff;
-  box-shadow: 0 12px 0 #fff, 0 24px 0 #fff;
+  background-color: white;
+  box-shadow: 0 12px 0 white, 0 24px 0 white;
   height: 2px;
   position: absolute;
   width: 40px;
   right: 20px;
   text-indent: -999em;
-  top: 26px; }
+  top: 26px;
+}
 
+/* line 48, ../scss/_nav.scss */
 #nav > a {
-  display: none; }
+  display: none;
+}
 
+/* line 50, ../scss/_nav.scss */
 #nav li {
   list-style-type: none;
-  position: relative; }
+  position: relative;
+}
 
+/* line 55, ../scss/_nav.scss */
 #nav > ul {
   height: auto;
   display: none;
   position: absolute;
   left: 0;
-  right: 0; }
+  right: 0;
+}
+/* line 61, ../scss/_nav.scss */
+#nav > ul li {
+  background-color: #0B15FF;
+  float: none;
+  padding: .5em;
+  width: 100%;
+  text-align: left;
+}
+@media all and (min-width: 51.25em) {
+  /* line 61, ../scss/_nav.scss */
   #nav > ul li {
-    background-color: #333333;
-    float: none;
-    padding: .5em;
-    width: 100%;
-    text-align: left; }
-    @media all and (min-width: 45em) {
-      #nav > ul li {
-        text-align: left; } }
-    #nav > ul li a {
-      color: #ffffff;
-      display: block;
-      font-size: 80%; }
-    #nav > ul li:hover {
-      background-color: #000000; }
-  @media all and (min-width: 45em) {
-    #nav > ul {
-      display: block;
-      position: relative; } }
+    text-align: left;
+  }
+}
+/* line 72, ../scss/_nav.scss */
+#nav > ul li a {
+  color: white;
+  display: block;
+  font-size: 80%;
+}
+/* line 77, ../scss/_nav.scss */
+#nav > ul li:hover {
+  background-color: black;
+}
+@media all and (min-width: 51.25em) {
+  /* line 55, ../scss/_nav.scss */
+  #nav > ul {
+    display: block;
+    position: relative;
+  }
+}
 
+/* line 86, ../scss/_nav.scss */
 #nav:target > ul {
-  display: block; }
+  display: block;
+}
 
+/* line 88, ../scss/_nav.scss */
 #nav li ul {
-  position: static; }
+  position: static;
+}
 
+/* line 92, ../scss/_nav.scss */
 #nav li:hover ul {
-  display: block; }
-  @media all and (min-width: 45em) {
-    #nav li:hover ul {
-      position: absolute; } }
+  display: block;
+}
+@media all and (min-width: 51.25em) {
+  /* line 92, ../scss/_nav.scss */
+  #nav li:hover ul {
+    position: absolute;
+  }
+}
 
+/* line 99, ../scss/_nav.scss */
 #nav li ul {
   display: none;
   top: 0;
   left: 0;
-  width: 100%; }
-  #nav li ul li a {
-    margin-left: 1em; }
+  width: 100%;
+}
+/* line 104, ../scss/_nav.scss */
+#nav li ul li a {
+  margin-left: 2%;
+}
 
-@media all and (min-width: 45em) {
+@media all and (min-width: 51.25em) {
+  /* line 108, ../scss/_nav.scss */
   #nav > a {
-    display: none; }
+    display: none;
+  }
+
+  /* line 111, ../scss/_nav.scss */
   #nav li {
-    position: relative; }
+    position: relative;
+  }
+
   /* first level */
+  /* line 120, ../scss/_nav.scss */
   #nav > ul > li {
     width: 25%;
     height: 100%;
-    float: left; }
+    float: left;
+  }
+
   /* second level */
+  /* line 128, ../scss/_nav.scss */
   #nav li ul {
     display: none;
     position: absolute;
-    top: 100%; }
+    top: 100%;
+  }
+
+  /* line 133, ../scss/_nav.scss */
   #nav li:hover ul {
-    display: block; } }
-
-.embed-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  overflow: hidden;
-  max-width: 100%;
-  height: auto; }
-  .embed-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%; }
-
-body, html {
-  box-sizing: border-box; }
-
-*, *:before, *:after {
-  box-sizing: inherit; }
-
-.clrfx:before, .clrfx:after {
-  content: " ";
-  /* 1 */
-  display: table;
-  /* 2 */ }
-
-.clrfx:after {
-  clear: both; }
-
-.clrfx {
-  *zoom: 1; }
-
-/*# sourceMappingURL=styles.css.map */
+    display: block;
+  }
+}
+/* line 12, ../scss/_forms.scss */
+input[type="text"], input[type="tel"],
+input[type="email"], textarea {
+  background-color: white;
+  border: 1px solid #F4F4F4;
+  color: #666666;
+  width: 100%;
+}
