--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -9,6 +9,14 @@ textarea {}
 
 input {}
 
+input[type="text"], input[type="tel"],
+input[type="email"], textarea {
+  background-color: white;
+  border: 1px solid $grey-5;
+  color: $grey-2;
+  width: 100%;
+}
+
 input[type="text"] {}
 
 input[type="radio"] {}
