--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -34,7 +34,7 @@ $grey-4: #CCCCCC;
 $grey-5: #F4F4F4;          // Lighter
 
 
-//* LAYOUT 
+//* MARGIN & PADDING 
 //*===========================================
 
 $max-width: 72em;
@@ -49,15 +49,14 @@ $space-4x: $space*4;
 
 
 
-//* BREAKPOINTS -- Primary
+//* BREAKPOINTS 
 //*===========================================
 
 
-$bp-1: 26.25em;           //* 420px
-$bp-2: 38.75em;           //* 620px
-$bp-3: 51.25em;           //* 820px
-$bp-4: 63.75em;           //* 1020px
-$bp-5: 76.25em;           //* 1220px
+$bp-1: 25em;             //* 400px
+$bp-2: 36.25em;          //* 580px
+$bp-3: 50em;             //* 800px
+$bp-5: 63.75em;          //* 1020px
 
 //* FROSTING 
 //*===========================================
