--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -10,12 +10,11 @@
 	align-content: $a-cont;
 }
 
-@mixin flex-child() {
+@mixin flex-child($order, $f-grow, $f-shrink, $f-basis, $a-self) {
 	order: $order;
 	flex-grow: $f-grow;
 	flex-shrink: $f-shrink;
 	flex-basis: $f-basis;
-	flex: $flex;
 	align-self: $a-self;
 }
 
