--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,6 +1,12 @@
 //*  CONTENT
 //*===========================================
 
+img {
+  display: block;
+  height: auto;
+  width: 100%;
+}
+
 article {}
 
 sections {}
