--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,7 +18,7 @@ $max-font: 24;
 //* COLORS
 //*===========================================
 
-$color-1: #0B15FF;
+$color-1: #F43C00;
 $color-2: #FF580B;
 $color-3: #9293B2;
 $color-4: #8DCC74;
