--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,7 +1,7 @@
 //*  MIXINS
 //*===========================================
 
-@mixin flex-parent($f-dir, $f-wrap, $j-cont, $a-item, $a-cont) {
+@mixin flex-p($f-dir, $f-wrap, $j-cont, $a-item, $a-cont) {
 	display: flex;
 	flex-direction: $f-dir;
 	flex-wrap: $f-wrap;
@@ -10,7 +10,7 @@
 	align-content: $a-cont;
 }
 
-@mixin flex-child($order, $f-grow, $f-shrink, $f-basis, $a-self) {
+@mixin flex-c($order, $f-grow, $f-shrink, $f-basis, $a-self) {
 	order: $order;
 	flex-grow: $f-grow;
 	flex-shrink: $f-shrink;
@@ -18,13 +18,13 @@
 	align-self: $a-self;
 }
 
-@mixin border-radius($radius) {
+@mixin border-rad($radius) {
 	border-radius: $radius;
 	-moz-border-radius: $radius;
 	-webkit-border-radius: $radius;
 }
 
-@mixin transition($t-prop, $t-time, $t-meth) {
+@mixin trans($t-prop, $t-time, $t-meth) {
 	-webkit-transition: $t-prop, $t-time, $t-meth;
 	-moz-transition: $t-prop, $t-time, $t-meth;
 	-ms-transition: $t-prop, $t-time, $t-meth;
