--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,4 +1,12 @@
-//*  CONTENT
+//*  SECTIONS 
+//*===========================================
+
+.sctHero {}
+
+.sctAbout {}
+
+
+//*  CONTENT 
 //*===========================================
 
 img {
@@ -6,7 +14,3 @@ img {
   height: auto;
   width: 100%;
 }
-
-article {}
-
-sections {}
