--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -24,30 +24,49 @@ body, html {
 
 html, body { height: 100%; }
 
-.content {
-	max-width: $max-width;
+.container {
 	margin: 0 auto;
 	padding: 0;
 }
 
-.layout-two-column {
-	.main {
-		@media all and (min-width:$bp-2) {
-			float: left;
-			padding-right: $space;
-			width: 70%;
-		}
+@media all and (min-width:$bp-5) {
+	.container--mxw {
+		max-width: $mxw;
+		margin: 0 auto;
+		padding: 0;
 	}
-	
-	.side {
-		clear: both;
-		@media all and (min-width:$bp-2) {
-			clear: none;
-			float: left;
-			padding: 0 0 0 $space;
-			width: 30%;
-		}
-	}
+}
+
+.sctWrap {
+	@include flex-p(
+		column,
+		nowrap,
+		flex-start,
+		flex-start,
+		flex-start
+	)
+	margin: 0;
+}
+
+.sctWrap__mxw {
+	margin: 0 auto;
+	max-width: $mxw;
+}
+
+.sctBloc {
+	width: 100%;
+}
+
+.sctBloc_50 {
+	width: 50%;
+}
+
+.sctBloc__33 {
+	width: 33.333333%;
+}
+
+.sctBloc__25 {
+	width: 25%;
 }
 
 .main, .side,
