--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,9 +1,7 @@
 //*  SECTIONS 
 //*===========================================
 
-.sctHero {}
-
-.sctAbout {}
+// .sct[pageAbbrev]__xxx {} 
 
 
 //*  CONTENT 
