--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,7 +1,7 @@
 //*  MAIN NAV
 //*===========================================
 
-#nav { 
+#menu { 
   position: relative;
   text-align: left;
   width: 100%;
@@ -11,8 +11,8 @@
   }
 }
 
-#nav:not( :target ) > a:first-of-type,
-#nav:target > a:last-of-type { 
+#menu:not( :target ) > a:first-of-type,
+#menu:target > a:last-of-type { 
   display: inline-block;
   background-color: black;
   color: white;
@@ -45,14 +45,14 @@
   top: 26px;
 }
 
-#nav > a { display: none; }
+#menu > a { display: none; }
 
-#nav li { 
+#menu li { 
   list-style-type: none;
   position: relative;
 }
 
-#nav > ul {
+#menu > ul {
   height: auto;
   display: none;
   position: absolute;
@@ -83,20 +83,20 @@
   }
 }
 
-#nav:target > ul { display: block; }
+#menu:target > ul { display: block; }
 
-#nav li ul { 
+#menu li ul { 
   position: static;
 }
 
-#nav li:hover ul { 
+#menu li:hover ul { 
   display: block;
   @media all and (min-width:$bp-3) {
     position: absolute;
   }
 }
 
-#nav li ul {
+#menu li ul {
   display: none;
   top: 0;
   left: 0;
@@ -105,19 +105,19 @@
 }
 
 @media all and (min-width:$bp-3) {
-  #nav > a {
+  #menu > a {
     display: none;
   }
-  #nav li {
+  #menu li {
     position: relative;
   }
  
   /* first level */
  
-  #nav > ul {
+  #menu > ul {
 //     height: 3.75em;
   }
-  #nav > ul > li {
+  #menu > ul > li {
     width: 25%;
     height: 100%;
     float: left;
@@ -125,12 +125,12 @@
  
   /* second level */
  
-  #nav li ul {
+  #menu li ul {
     display: none;
     position: absolute;
     top: 100%;
   }
-  #nav li:hover ul {
+  #menu li:hover ul {
     display: block;
   }
 }
