--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -42,7 +42,7 @@ $gr-5: #F4F4F4;          // Lighter
 
 $mxw: 80em;
 
-$space: 6%;
+$space: 1em;
 $space-half: $space/2;
 $space-qrtr: $space/4;
 $space-and-half: $space*1.5;
