--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -30,7 +30,7 @@
 }
 
 .burger {
-  font-family: $font-1;
+  font-family: $fnt-1;
 }
 
 .burger:after {
@@ -59,7 +59,7 @@
   left: 0;
   right: 0;
   li {
-    background-color: $color-1;
+    background-color: $cl-1;
     float: none; 
     padding: .5em;
     width: 100%;
