--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,8 @@
 //* FONTS
 //*===========================================
 
-$font-1: 'Helvetica', helvetica, sans-serif;
-$font-2: 'Georgia', 'Times', serif;
+$fnt-1: 'Helvetica', helvetica, sans-serif;
+$fnt-2: 'Georgia', 'Times', serif;
 
 
 //*  FONT SCALING
