--- a/css/styles.css
+++ b/css/styles.css
@@ -1,272 +1,200 @@
-/* line 4, ../scss/_layout.scss */
+/* line 4, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
 body, html {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
-/* line 8, ../scss/_layout.scss */
+/* line 8, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
 *, *:before, *:after {
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
-/* line 12, ../scss/_layout.scss */
+/* line 12, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
 .clrfx:before, .clrfx:after {
   content: " ";
   /* 1 */
   display: table;
-  /* 2 */
-}
+  /* 2 */ }
 
-/* line 17, ../scss/_layout.scss */
+/* line 17, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
 .clrfx:after {
-  clear: both;
-}
+  clear: both; }
 
-/* line 19, ../scss/_layout.scss */
+/* line 19, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
 .clrfx {
-  *zoom: 1;
-}
+  *zoom: 1; }
 
-/* line 25, ../scss/_layout.scss */
+/* line 25, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
 html, body {
-  height: 100%;
-}
+  height: 100%; }
 
-/* line 27, ../scss/_layout.scss */
-.content {
-  max-width: 72em;
-  margin: 0 auto;
-  padding: 0;
-}
-
-@media all and (min-width: 38.75em) {
-  /* line 34, ../scss/_layout.scss */
-  .layout-two-column .main {
-    float: left;
-    padding-right: 2%;
-    width: 70%;
-  }
-}
-/* line 42, ../scss/_layout.scss */
-.layout-two-column .side {
-  clear: both;
-}
-@media all and (min-width: 38.75em) {
-  /* line 42, ../scss/_layout.scss */
-  .layout-two-column .side {
-    clear: none;
-    float: left;
-    padding: 0 0 0 2%;
-    width: 30%;
-  }
-}
-
-/* line 53, ../scss/_layout.scss */
-.main, .side,
-.grid-item, footer {
-  background-color: #f8f8f8;
-}
-
-/* line 62, ../scss/_layout.scss */
-.grid {
+/* line 27, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
+.wrap {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
   margin: 0;
-  overflow: hidden;
-}
+  width: 100%; }
 
-/* line 67, ../scss/_layout.scss */
-.grid-item {
-  border: 1px solid white;
-  padding: 1% 0;
-}
-@media all and (min-width: 38.75em) {
-  /* line 67, ../scss/_layout.scss */
-  .grid-item {
-    float: left;
-  }
-}
+/* line 39, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
+.wrap--mxw {
+  margin: 0 auto;
+  max-width: 80em; }
 
-/* line 76, ../scss/_layout.scss */
-.one-col .grid-item {
+/* line 44, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
+.bloc {
+  width: 100%; }
+
+/* line 48, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
+.bloc--50 {
   width: 100%;
-}
+  -webkit-transition: all, 0.3s, ease;
+  -moz-transition: all, 0.3s, ease;
+  -ms-transition: all, 0.3s, ease;
+  -o-transition: all, 0.3s, ease;
+  transition: all, 0.3s, ease; }
+  @media all and (min-width: 45.625em) {
+    /* line 48, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
+    .bloc--50 {
+      width: 50%; } }
 
-@media all and (min-width: 38.75em) {
-  /* line 81, ../scss/_layout.scss */
-  .two-col > .grid-item {
-    float: left;
-    width: 50%;
-  }
-  /* line 84, ../scss/_layout.scss */
-  .two-col > .grid-item:nth-of-type(odd) {
-    clear: left;
-  }
-}
+/* line 56, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
+.bloc--33 {
+  width: 100%;
+  -webkit-transition: all, 0.3s, ease;
+  -moz-transition: all, 0.3s, ease;
+  -ms-transition: all, 0.3s, ease;
+  -o-transition: all, 0.3s, ease;
+  transition: all, 0.3s, ease; }
+  @media all and (min-width: 45.625em) {
+    /* line 56, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
+    .bloc--33 {
+      width: 33.333333%; } }
 
-@media all and (min-width: 38.75em) {
-  /* line 91, ../scss/_layout.scss */
-  .three-col > .grid-item {
-    float: left;
-    width: 33.333333%;
-  }
-}
+/* line 64, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
+.bloc--25 {
+  width: 100%;
+  -webkit-transition: all, 0.3s, ease;
+  -moz-transition: all, 0.3s, ease;
+  -ms-transition: all, 0.3s, ease;
+  -o-transition: all, 0.3s, ease;
+  transition: all, 0.3s, ease; }
+  @media all and (min-width: 45.625em) {
+    /* line 64, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
+    .bloc--25 {
+      width: 25%; } }
 
-@media all and (min-width: 38.75em) {
-  /* line 100, ../scss/_layout.scss */
-  .four-col > .grid-item {
-    float: left;
-    width: 25%;
-  }
-}
-
-@media all and (min-width: 38.75em) {
-  /* line 109, ../scss/_layout.scss */
-  .five-col > .grid-item {
-    float: left;
-    width: 20%;
-  }
-}
-
-@media all and (min-width: 38.75em) {
-  /* line 118, ../scss/_layout.scss */
-  .six-col > .grid-item {
-    float: left;
-    width: 16.666666%;
-  }
-}
-
-/* line 125, ../scss/_layout.scss */
-.main, .side, .grid-item {
-  border: 1px solid white;
-}
-
-/* line 133, ../scss/_layout.scss */
-.embed-block {
+/* line 76, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
+.bloc--embed {
   position: relative;
   padding-bottom: 56.25%;
   overflow: hidden;
   max-width: 100%;
+  height: auto; }
+  /* line 82, Users/jtuck/Documents/GitHub/site-template/scss/_layout.scss */
+  .bloc--embed iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
+/* line 10, Users/jtuck/Documents/GitHub/site-template/scss/_content.scss */
+img {
+  display: block;
   height: auto;
-}
-/* line 139, ../scss/_layout.scss */
-.embed-block iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+  width: 100%; }
 
-/* line 4, ../scss/_type_links.scss */
-html, body {
-  font-family: helvetica, sans-serif;
-}
-
-/* line 8, ../scss/_type_links.scss */
+/* line 4, Users/jtuck/Documents/GitHub/site-template/scss/_type_links.scss */
 :root {
-  font-size: 16px;
-}
+  font-size: 16px; }
 
-@media (min-width: 320px) and (max-width: 1120px) {
-  /* line 11, ../scss/_type_links.scss */
+@media (min-width: 320px) and (max-width: 1280px) {
+  /* line 7, Users/jtuck/Documents/GitHub/site-template/scss/_type_links.scss */
   :root {
-    font-size: calc( 16px + (24 - 16) * ((100vw - 320px) / (1120 - 320) ));
-  }
-}
-@media (min-width: 1120px) {
-  /* line 17, ../scss/_type_links.scss */
+    font-size: calc( 16px + (22 - 16) * ((100vw - 320px) / (1280 - 320) )); } }
+
+@media (min-width: 1280px) {
+  /* line 13, Users/jtuck/Documents/GitHub/site-template/scss/_type_links.scss */
   :root {
-    font-size: 24px;
-  }
-}
-/* line 25, ../scss/_type_links.scss */
+    font-size: 22px; } }
+
+/* line 21, Users/jtuck/Documents/GitHub/site-template/scss/_type_links.scss */
 h1 {
-  font-size: 300%;
-}
+  font-size: 300%; }
 
-/* line 27, ../scss/_type_links.scss */
+/* line 23, Users/jtuck/Documents/GitHub/site-template/scss/_type_links.scss */
 h2 {
-  font-size: 250%;
-}
+  font-size: 250%; }
 
-/* line 29, ../scss/_type_links.scss */
+/* line 25, Users/jtuck/Documents/GitHub/site-template/scss/_type_links.scss */
 h3 {
-  font-size: 200%;
-}
+  font-size: 200%; }
 
-/* line 45, ../scss/_type_links.scss */
+/* line 41, Users/jtuck/Documents/GitHub/site-template/scss/_type_links.scss */
 p {
-  margin-bottom: 2%;
-}
+  margin-bottom: 1em; }
 
-/* line 73, ../scss/_type_links.scss */
+/* line 69, Users/jtuck/Documents/GitHub/site-template/scss/_type_links.scss */
 a {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
-/* line 81, ../scss/_type_links.scss */
+/* line 77, Users/jtuck/Documents/GitHub/site-template/scss/_type_links.scss */
 .btn {
   background-color: #999999;
   color: white;
   display: table;
   font: 300 100%/1 "Helvetica", helvetica, sans-serif;
   margin: 0 auto;
-  padding: 1% 2%;
+  padding: 0.5em 1em;
   text-align: center;
   text-transform: uppercase;
   -webkit-transition: all, 0.3s, ease;
   -moz-transition: all, 0.3s, ease;
   -ms-transition: all, 0.3s, ease;
   -o-transition: all, 0.3s, ease;
-  transition: all, 0.3s, ease;
-}
-/* line 91, ../scss/_type_links.scss */
-.btn:hover {
-  background-color: #333333;
-  color: white;
-}
+  transition: all, 0.3s, ease; }
+  /* line 87, Users/jtuck/Documents/GitHub/site-template/scss/_type_links.scss */
+  .btn:hover {
+    background-color: #333333;
+    color: white; }
 
-/* line 4, ../scss/_nav.scss */
-#nav {
+/* line 4, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+#menu {
   position: relative;
   text-align: left;
-  width: 100%;
-}
-/* line 8, ../scss/_nav.scss */
-#nav li {
-  list-style-type: none;
-  position: relative;
-}
+  width: 100%; }
+  /* line 8, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+  #menu li {
+    list-style-type: none;
+    position: relative; }
 
-/* line 14, ../scss/_nav.scss */
-#nav:not(:target) > a:first-of-type,
-#nav:target > a:last-of-type {
+/* line 14, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+#menu:not(:target) > a:first-of-type,
+#menu:target > a:last-of-type {
   display: inline-block;
   background-color: black;
   color: white;
   font-size: 80%;
-  padding: 1em;
-}
-/* line 21, ../scss/_nav.scss */
-#nav:not(:target) > a:first-of-type:before,
-#nav:target > a:last-of-type:before {
-  content: "\2261 ";
-  font-size: 140%;
-  position: relative;
-  top: 2px;
-}
-@media all and (min-width: 51.25em) {
-  /* line 14, ../scss/_nav.scss */
-  #nav:not(:target) > a:first-of-type,
-  #nav:target > a:last-of-type {
-    display: none;
-  }
-}
+  padding: 1em; }
+  /* line 21, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+  #menu:not(:target) > a:first-of-type:before,
+  #menu:target > a:last-of-type:before {
+    content: "\2261 ";
+    font-size: 140%;
+    position: relative;
+    top: 2px; }
+  @media all and (min-width: 45.625em) {
+    /* line 14, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+    #menu:not(:target) > a:first-of-type,
+    #menu:target > a:last-of-type {
+      display: none; } }
 
-/* line 32, ../scss/_nav.scss */
+/* line 32, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
 .burger {
-  font-family: "Helvetica", helvetica, sans-serif;
-}
+  font-family: "Helvetica", helvetica, sans-serif; }
 
-/* line 36, ../scss/_nav.scss */
+/* line 36, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
 .burger:after {
   content: '';
   background-color: white;
@@ -276,130 +204,104 @@ a {
   width: 40px;
   right: 20px;
   text-indent: -999em;
-  top: 26px;
-}
+  top: 26px; }
 
-/* line 48, ../scss/_nav.scss */
-#nav > a {
-  display: none;
-}
+/* line 48, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+#menu > a {
+  display: none; }
 
-/* line 50, ../scss/_nav.scss */
-#nav li {
+/* line 50, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+#menu li {
   list-style-type: none;
-  position: relative;
-}
+  position: relative; }
 
-/* line 55, ../scss/_nav.scss */
-#nav > ul {
+/* line 55, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+#menu > ul {
   height: auto;
   display: none;
   position: absolute;
   left: 0;
-  right: 0;
-}
-/* line 61, ../scss/_nav.scss */
-#nav > ul li {
-  background-color: #0B15FF;
-  float: none;
-  padding: .5em;
-  width: 100%;
-  text-align: left;
-}
-@media all and (min-width: 51.25em) {
-  /* line 61, ../scss/_nav.scss */
-  #nav > ul li {
-    text-align: left;
-  }
-}
-/* line 72, ../scss/_nav.scss */
-#nav > ul li a {
-  color: white;
-  display: block;
-  font-size: 80%;
-}
-/* line 77, ../scss/_nav.scss */
-#nav > ul li:hover {
-  background-color: black;
-}
-@media all and (min-width: 51.25em) {
-  /* line 55, ../scss/_nav.scss */
-  #nav > ul {
-    display: block;
-    position: relative;
-  }
-}
+  right: 0; }
+  /* line 61, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+  #menu > ul li {
+    background-color: #F43C00;
+    float: none;
+    padding: .5em;
+    width: 100%;
+    text-align: left; }
+    @media all and (min-width: 45.625em) {
+      /* line 61, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+      #menu > ul li {
+        text-align: left; } }
+    /* line 72, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+    #menu > ul li a {
+      color: white;
+      display: block;
+      font-size: 80%; }
+    /* line 77, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+    #menu > ul li:hover {
+      background-color: black; }
+  @media all and (min-width: 45.625em) {
+    /* line 55, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+    #menu > ul {
+      display: block;
+      position: relative; } }
 
-/* line 86, ../scss/_nav.scss */
-#nav:target > ul {
-  display: block;
-}
+/* line 86, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+#menu:target > ul {
+  display: block; }
 
-/* line 88, ../scss/_nav.scss */
-#nav li ul {
-  position: static;
-}
+/* line 88, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+#menu li ul {
+  position: static; }
 
-/* line 92, ../scss/_nav.scss */
-#nav li:hover ul {
-  display: block;
-}
-@media all and (min-width: 51.25em) {
-  /* line 92, ../scss/_nav.scss */
-  #nav li:hover ul {
-    position: absolute;
-  }
-}
+/* line 92, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+#menu li:hover ul {
+  display: block; }
+  @media all and (min-width: 45.625em) {
+    /* line 92, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+    #menu li:hover ul {
+      position: absolute; } }
 
-/* line 99, ../scss/_nav.scss */
-#nav li ul {
+/* line 99, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+#menu li ul {
   display: none;
   top: 0;
   left: 0;
-  width: 100%;
-}
-/* line 104, ../scss/_nav.scss */
-#nav li ul li a {
-  margin-left: 2%;
-}
+  width: 100%; }
+  /* line 104, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+  #menu li ul li a {
+    margin-left: 1em; }
 
-@media all and (min-width: 51.25em) {
-  /* line 108, ../scss/_nav.scss */
-  #nav > a {
-    display: none;
-  }
-
-  /* line 111, ../scss/_nav.scss */
-  #nav li {
-    position: relative;
-  }
-
+@media all and (min-width: 45.625em) {
+  /* line 108, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+  #menu > a {
+    display: none; }
+  /* line 111, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+  #menu li {
+    position: relative; }
   /* first level */
-  /* line 120, ../scss/_nav.scss */
-  #nav > ul > li {
+  /* line 120, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+  #menu > ul > li {
     width: 25%;
     height: 100%;
-    float: left;
-  }
-
+    float: left; }
   /* second level */
-  /* line 128, ../scss/_nav.scss */
-  #nav li ul {
+  /* line 128, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+  #menu li ul {
     display: none;
     position: absolute;
-    top: 100%;
-  }
+    top: 100%; }
+  /* line 133, Users/jtuck/Documents/GitHub/site-template/scss/_nav.scss */
+  #menu li:hover ul {
+    display: block; } }
 
-  /* line 133, ../scss/_nav.scss */
-  #nav li:hover ul {
-    display: block;
-  }
-}
-/* line 12, ../scss/_forms.scss */
+/* line 12, Users/jtuck/Documents/GitHub/site-template/scss/_forms.scss */
 input[type="text"], input[type="tel"],
 input[type="email"], textarea {
-  background-color: white;
+  background-color: #ffffff;
   border: 1px solid #F4F4F4;
   color: #666666;
-  width: 100%;
-}
+  width: 100%; }
+
+/*# sourceMappingURL=styles.css.map */
