--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,16 @@
+/*
+Theme Name: THEME NAME
+Theme URI: https://wordpress.org/themes/theme_name/
+Author: Josh Tuck
+Author URI: http://rustbelt.co/
+Description: This is a custom theme built on top of Blankslate for: _______.
+Version: 1.0
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Text Domain: theme_name
+
+*/
+
 //*  THE MAIN STYLESHEET
 //*===========================================
 
